bootstrap 练习第三天

--- a/InnotekDemo02/src/main/resources/templates/bootstrap/list.html
+++ b/InnotekDemo02/src/main/resources/templates/bootstrap/list.html
@@ -43,7 +43,7 @@
     <div class="list-group">
         <a href="https://www.baidu.com" class="list-group-item">百度</a>
         <a href="#" class="list-group-item list-group-item-info">list-group-item list-group-item-info</a>
-        <a href="test01.html" class="list-group-item list-group-item-action">list-group-item list-group-item-action</a>
+        <a href="helloworld.html" class="list-group-item list-group-item-action">list-group-item list-group-item-action</a>
         <a href="#" class="list-group-item list-group-item-action active">list-group-item list-group-item-action active</a>
         <a href="#" class="list-group-item disabled">list-group-item disabled</a>
     </div>
