--- a/InnotekDemo02/src/main/resources/templates/bootstrap/form.html
+++ b/InnotekDemo02/src/main/resources/templates/bootstrap/form.html
@@ -22,10 +22,11 @@
 
 <div class="container-fluid">
 <!--    第一个bootstrap表单-->
+<!--    ready only 和 form-control-plaintext综合使用的效果很好-->
     <form>
         <div class="form-group">
             <label for="username">用户名</label>
-            <input type="text" name="username" id="username" class="form-control" required>
+            <input type="text" name="username" value="lifan" id="username" class="form-control-plaintext" readonly>
         </div>
 
         <div class="form-group">
