--- a/InnotekDemo02/src/main/resources/templates/bootstrap/nav.html
+++ b/InnotekDemo02/src/main/resources/templates/bootstrap/nav.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container-fluid">
 <!--    简单的导航栏 -->
-    <ol class="nav">
+    <ul class="nav">
         <li class="nav-item">
             <a href="https://www.baidu.com" class="nav-link">百度</a>
         </li>
@@ -31,11 +31,11 @@
         <li class="nav-item">
             <a href="https://www.360.com" class="nav-link disabled">360 disabled</a>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    居中对齐-->
-    <ol class="nav justify-content-center">
+    <ul class="nav justify-content-center">
         <li class="nav-item">
             <a href="https://www.baidu.com" class="nav-link">百度</a>
         </li>
@@ -45,11 +45,11 @@
         <li class="nav-item">
             <a href="https://www.360.com" class="nav-link disabled">360 disabled</a>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    右对齐-->
-    <ol class="nav justify-content-end">
+    <ul class="nav justify-content-end">
         <li class="nav-item">
             <a href="https://www.baidu.com" class="nav-link">百度</a>
         </li>
@@ -59,11 +59,11 @@
         <li class="nav-item">
             <a href="https://www.360.com" class="nav-link disabled">360 disabled</a>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    垂直导航-->
-    <ol class="nav flex-column">
+    <ul class="nav flex-column">
         <li class="nav-item">
             <a href="https://www.baidu.com" class="nav-link">百度</a>
         </li>
@@ -73,11 +73,11 @@
         <li class="nav-item">
             <a href="https://www.360.com" class="nav-link disabled">360 disabled</a>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    选项卡导航-->
-    <ol class="nav nav-tabs">
+    <ul class="nav nav-tabs">
         <li class="nav-item">
             <a href="https://www.baidu.com" class="nav-link active">百度</a>
         </li>
@@ -87,11 +87,11 @@
         <li class="nav-item">
             <a href="https://www.360.com" class="nav-link disabled">360 disabled</a>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    等宽胶囊导航-->
-    <ol class="nav nav-pills nav-justified">
+    <ul class="nav nav-pills nav-justified">
         <li class="nav-item active">
             <a href="https://www.baidu.com" class="nav-link active">百度</a>
         </li>
@@ -101,11 +101,11 @@
         <li class="nav-item">
             <a href="https://www.360.com" class="nav-link disabled">360 disabled</a>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    选项卡下拉菜单-->
-    <ol class="nav nav-tabs">
+    <ul class="nav nav-tabs">
         <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">网站1</a>
             <div class="dropdown-menu">
@@ -123,10 +123,10 @@
                 <a class="dropdown-item" href="#">dropdown-item2</a>
             </div>
         </li>
-    </ol>
+    </ul>
 
 <!--    胶囊选项卡下拉菜单-->
-    <ol class="nav nav-pills">
+    <ul class="nav nav-pills">
         <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">网站1</a>
             <div class="dropdown-menu">
@@ -143,11 +143,11 @@
                 <a class="dropdown-item" href="#">#3</a>
             </div>
         </li>
-    </ol>
+    </ul>
     <br />
 
 <!--    动态选项卡-->
-    <ol class="nav nav-tabs">
+    <ul class="nav nav-tabs">
         <li class="nav-item ">
             <a href="#one" class="nav-link active" data-toggle="tab">one</a>
         </li>
@@ -157,7 +157,7 @@
         <li class="nav-item">
             <a href="#three" class="nav-link" data-toggle="tab">three</a>
         </li>
-    </ol>
+    </ul>
 
     <div class="tab-content">
         <div class="tab-pane container active" id="one">one</div>
@@ -166,7 +166,7 @@
     </div>
 
 <!--    动态胶囊选项卡-->
-    <ol class="nav nav-pills">
+    <ul class="nav nav-pills">
         <li class="nav-item">
             <a href="#lifan" class="nav-link active" data-toggle="pill">lifan</a>
         </li>
@@ -176,13 +176,15 @@
         <li class="nav-item">
             <a href="#lilifan" class="nav-link" data-toggle="pill">lilifan</a>
         </li>
-    </ol>
+    </ul>
 
     <div class="tab-content">
         <div class="container tab-pane active" id="lifan">lifan</div>
         <div class="container tab-pane" id="lifanfan">lifanfan</div>
         <div class="container tab-pane" id="lilifan">lilifan</div>
     </div>
+
+
 
 
 
